--- a/invoices-js/package.json
+++ b/invoices-js/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.24",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "^2.1.3",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
